--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,20 +7,10 @@
 </div>
 <h2>Here are some links to help you start: </h2>
 <ul>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
-  </li>
+  <li><a routerLink="/">Root</a></li>
+  <li><a routerLink="/page">page</a></li>
+  <li><a routerLink="/basic">basic</a></li>
 </ul>
 
-<ng-template #main=dynamicdirective dynamic></ng-template>
-<aside>
-  <app-basic-wrapper></app-basic-wrapper>
-</aside>
 
-
+<router-outlet></router-outlet>
